--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/bundles/Messages.properties
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/bundles/Messages.properties
@@ -26,3 +26,6 @@ action_new-aircraft=New Aircraft
 action_new-aircrafttype=New Aircraft Type
 action_new-userlicense=New User License
 action_new-reservation=New Reservation
+
+exception_badrequest=The data transmitted to the server was invalid
+exception_servererror=The backend server could not handle the request properly
