improved Authorization (allow PermitAll to guests), improved frontent (jfxtras agenda and datetime picker)

--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/bundles/Messages.properties
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/bundles/Messages.properties
@@ -26,6 +26,7 @@ action_new-aircraft=New Aircraft
 action_new-aircrafttype=New Aircraft Type
 action_new-userlicense=New User License
 action_new-reservation=New Reservation
+action_reload=Reload
 
 exception_badrequest=The data transmitted to the server was invalid
 exception_servererror=The backend server could not handle the request properly
